<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background">

    <AdapterViewFlipper
        android:id="@+id/news_flipper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:autoStart="true"
        android:flipInterval="7000"
        android:inAnimation="@android:anim/fade_in"
        android:outAnimation="@android:anim/fade_out" />

    <TextView
        android:id="@+id/widget_empty"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/widget_loading"
        android:textColor="#B0B8C4"
        android:textSize="13sp" />

    <ImageButton
        android:id="@+id/widget_refresh"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="top|end"
        android:layout_margin="6dp"
        android:background="@drawable/refresh_bg"
        android:contentDescription="@string/widget_refresh"
        android:padding="7dp"
        android:src="@drawable/ic_refresh" />

    <ImageButton
        android:id="@+id/widget_previous"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|start"
        android:layout_margin="6dp"
        android:background="@drawable/refresh_bg"
        android:contentDescription="@string/widget_previous_story"
        android:padding="7dp"
        android:src="@drawable/ic_widget_previous" />

    <ImageButton
        android:id="@+id/widget_next"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="6dp"
        android:background="@drawable/refresh_bg"
        android:contentDescription="@string/widget_next_story"
        android:padding="7dp"
        android:src="@drawable/ic_widget_next" />
</FrameLayout>
